samples/_failures_safe/1760960921_5ad760_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_dd51c6e9.c: In function ‘main’:
./samples/SAFE/__tmp_dd51c6e9.c:132:30: error: missing terminating " character
  132 |     add_log_entry(&analyzer, "2024-01-15 10:30
      |                              ^~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_dd51c6e9.c:132:5: error: expected expression at end of input
  132 |     add_log_entry(&analyzer, "2024-01-15 10:30
      |     ^~~~~~~~~~~~~
./samples/SAFE/__tmp_dd51c6e9.c:132:5: error: too few arguments to function ‘add_log_entry’
./samples/SAFE/__tmp_dd51c6e9.c:53:5: note: declared here
   53 | int add_log_entry(struct LogAnalyzer *analyzer, const char *timestamp, const char *level, const char *message) {
      |     ^~~~~~~~~~~~~
./samples/SAFE/__tmp_dd51c6e9.c:132:5: error: expected declaration or statement at end of input
  132 |     add_log_entry(&analyzer, "2024-01-15 10:30
      |     ^~~~~~~~~~~~~
